--- a/Angular/arkusz.html
+++ b/Angular/arkusz.html
@@ -1,158 +1,157 @@
 <html ng-app="BlankApp">
 
 <head>
-  <link rel="stylesheet" href="https://cdn.gitcdn.xyz/cdn/angular/bower-material/v0.11.2/angular-material.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="CSS.css">
-  <meta name="viewport" content="initial-scale=1" />
-  <title>Engineer project UAM</title>
+    <link rel="stylesheet" href="https://cdn.gitcdn.xyz/cdn/angular/bower-material/v0.11.2/angular-material.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="CSS.css">
+    <meta name="viewport" content="initial-scale=1" />
+    <title>Engineer project UAM</title>
 </head>
 
 <body layout="column" ng-controller="AppCtrl">
-  <md-toolbar layout="row">
-    <div class="md-toolbar-tools">
-      <button ng-click="toggleSidenav('left')" hide-gt-sm class="menuBtn" aria-label="Toggle Menu">
+    <md-toolbar layout="row">
+        <div class="md-toolbar-tools">
+            <button ng-click="toggleSidenav('left')" hide-gt-sm class="menuBtn" aria-label="Toggle Menu">
       </button>
-      <h1 layout-align-gt-sm="center">
-        <md-button ng-href="{{userUrl}}">Engineer project</md-button>
-      </h1>
-	</div>
-<!--linki zewnętrzne start-->
-	<div hide-gt-sm>
-    <md-content layout="column" id="links" flex>
-      <div ng-controller="AppCtrl" layout="column" ng-cloak class="md-inline-form">
-	<md-fab-toolbar md-open="false" md-direction="left">
-    <md-fab-trigger>
-      <md-button class="md-fab md-primary">
-		<i class="material-icons">reorder</i>
-      </md-button>
-    </md-fab-trigger>
-    <md-toolbar>
-      <md-fab-actions class="md-toolbar-tools">
-        <md-button class="md-fab md-primary" ng-href="{{loginUrl}}">
-			<i class="material-icons md-24">settings_power</i>
-		</md-button>
-		<md-button class="md-fab md-primary" target="_blank" ng-href="{{WMIUrl}}">
-			WMI
-		</md-button>
-		<md-button class="md-fab md-primary" target="_blank" ng-href="{{UAMUrl}}">
-			UAM
-		</md-button>
-      </md-fab-actions>
+            <h1 layout-align-gt-sm="center">
+                <md-button ng-href="{{userUrl}}">Engineer project</md-button>
+            </h1>
+        </div>
+        <!--linki zewnętrzne start-->
+        <div hide-gt-sm>
+            <md-content layout="column" id="links" flex>
+                <div ng-controller="AppCtrl" layout="column" ng-cloak class="md-inline-form">
+                    <md-fab-toolbar md-open="false" md-direction="left">
+                        <md-fab-trigger>
+                            <md-button class="md-fab md-primary">
+                                <i class="material-icons">reorder</i>
+                            </md-button>
+                        </md-fab-trigger>
+                        <md-toolbar>
+                            <md-fab-actions class="md-toolbar-tools">
+                                <md-button class="md-fab md-primary" ng-href="{{loginUrl}}">
+                                    <i class="material-icons md-24">settings_power</i>
+                                </md-button>
+                                <md-button class="md-fab md-primary" target="_blank" ng-href="{{WMIUrl}}">
+                                    WMI
+                                </md-button>
+                                <md-button class="md-fab md-primary" target="_blank" ng-href="{{UAMUrl}}">
+                                    UAM
+                                </md-button>
+                            </md-fab-actions>
+                        </md-toolbar>
+                    </md-fab-toolbar>
+                </div>
+            </md-content>
+        </div>
+        <div hide-xs hide-sm layout="row">
+            <md-button class="md-fab md-primary" target="_blank" ng-href="{{UAMUrl}}">
+                UAM
+            </md-button>
+            <md-button class="md-fab md-primary" target="_blank" ng-href="{{WMIUrl}}">
+                WMI
+            </md-button>
+            <md-button class="md-fab md-primary" ng-href="{{loginUrl}}">
+                <i class="material-icons md-24">settings_power</i>
+            </md-button>
+        </div>
+        <!--linki zewnętrzne end-->
     </md-toolbar>
-	</md-fab-toolbar>
-	  </div>
-    </md-content>
-	</div>
-	<div hide-xs hide-sm layout="row">
-	<md-button class="md-fab md-primary" target="_blank" ng-href="{{UAMUrl}}">
-		UAM
-	</md-button>
-	<md-button class="md-fab md-primary" target="_blank" ng-href="{{WMIUrl}}">
-		WMI
-	</md-button>
-	<md-button class="md-fab md-primary" ng-href="{{loginUrl}}">
-		<i class="material-icons md-24">settings_power</i>
-	</md-button>
-	</div>
-<!--linki zewnętrzne end-->
-  </md-toolbar>
-  
-  <div layout="row" flex class="change-my-css">
-    <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
-		<md-button ng-href="{{arkuszUrl}}">stworz arkusz</md-button>
-		<md-button ng-href="{{loadUrl}}">wczytaj szablon</md-button>
-		<md-button>zlec badanie</md-button>
-		<md-button ng-href="{{arkuszUrl}}">przeprowadz badanie</md-button>
-    </md-sidenav>
 
-    <md-content layout="column" id="content" flex class="md-padding">
-		<div ng-controller="AppCtrl" layout="column" ng-cloak class="md-inline-form">
-  <md-content md-theme="docs-dark" layout-gt-sm="row" layout-padding>
-  </md-content>
-  <md-content layout-padding>
-    <div>
-	<section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
-      <form name="userForm">
-        {{serwis}}
-			<div layout-gt-sm="row">
-			<!--Chipsy start-->
-			<md-chips ng-model="AppCtrl.editableFruitNames" readonly="AppCtrl.readonly" md-removable="AppCtrl.removable"
-              md-enable-chip-edit="true"></md-chips>
-			<!--Chipsy end-->
-			  <md-input-container class="md-block" flex-gt-sm>
-				<label>Liczba operatorow</label>
-				<input ng-model="badanie.liczbaOperatorow" type="number" min="1">
-			  </md-input-container>
-			  <md-input-container class="md-block" flex-gt-sm>
-				<label>Liczba cech</label>
-				<input ng-model="badanie.liczbaCech" type="number" min="1">
-			  </md-input-container>
-			  <md-input-container class="md-block" flex-gt-sm>
-				<label>Liczba produktow</label>
-				<input ng-model="badanie.liczbaProduktow" type="number" min="5">
-			  </md-input-container>
-			</div>
-			<div layout-gt-sm="row">
-			  <md-input-container class="md-block" flex-gt-sm>
-				<label>Liczba powtorzen</label>
-				<input ng-model="badanie.liczbaPowtorzen" type="number" min="1">
-			  </md-input-container>
-			  <md-input-container class="md-block" flex-gt-sm>
-				<label>Tytul</label>
-				<input ng-model="badanie.tytul" type="text">
-			  </md-input-container>
-			 <md-input-container class="md-block" flex-gt-sm>
-				<label>Nazwa firmy/wydzial</label>
-				<input id="nazwaFirmy" ng-model="badanie.nazwaFirmy" type="text">
-			  </md-input-container>
-			</div>
-			<div layout-gt-sm="row">
-			  <md-input-container class="md-block" flex-gt-sm>
-				<label>Odpowiedzialny</label>
-				<input ng-model="badanie.odpowiedzialny" type="text">
-			  </md-input-container>
-			  <md-input-container class="md-block" flex-gt-sm>
-				<label>Klient</label>
-				<input ng-model="baanie.klient"  type="text">
-			  </md-input-container>
-			  <md-input-container class="md-block" flex-gt-sm>
-				<label>Proces</label>
-				<input ng-model="badanie.proces"  type="text">
-			  </md-input-container>
-			  <md-datepicker ng-model="submissionDate" md-placeholder="Enter date">
-			  </md-datepicker>
-			</div>
-			<div layout-gt-sm="row">
-			  <md-input-container class="md-block" flex-gt-sm>
-				<label>Stanowisko</label>
-				<input ng-model="badanie.stanowisko"  type="text">
-			  </md-input-container>
-			  <md-input-container class="md-block" flex-gt-sm>
-				<label>Nazwa czesci</label>
-				<input ng-model="badanie.nazwaCzesci"  type="text">
-			  </md-input-container>
-			  <md-input-container class="md-block" flex-gt-sm>
-				<label>Nazwa elementu</label>
-				<input ng-model="badanie.nazwaElementu" type="text">
-			  </md-input-container>
-			</div>
-      </form>
-	</section>
-	</div>
-	<div>
-	<section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
-      <md-button ng-href="#traits" ng-cLick="zlecBadanie()" class="add-tab md-primary md-raised" type="submit">Dalej</md-button>
-    </section>
-	</div>
-  </md-content>
-		</div> 
-    </md-content>
-  </div>
+    <div layout="row" flex class="change-my-css">
+        <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
+            <md-button ng-href="{{arkuszUrl}}">stworz arkusz</md-button>
+            <md-button ng-href="{{loadUrl}}">wczytaj szablon</md-button>
+            <md-button>zlec badanie</md-button>
+            <md-button ng-href="{{arkuszUrl}}">przeprowadz badanie</md-button>
+        </md-sidenav>
 
-      
-  <!-- Angular Material Dependencies -->
+        <md-content layout="column" id="content" flex class="md-padding">
+            <div ng-controller="BasicDemoCtrl" layout="column" ng-cloak class="md-inline-form">
+                <md-content md-theme="docs-dark" layout-gt-sm="row" layout-padding>
+                </md-content>
+                <md-content layout-padding>
+                    <div>
+                        <section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
+                            <form name="userForm">
+                                {{serwis}}
+                                <div layout-gt-sm="row">
+                                    <!--Chipsy start-->
+                                    <md-chips ng-model="BasicDemoCtrl.FruitNames" readonly="BasicDemoCtrl.readonly" md-removable="BasicDemoCtrl.removable" md-enable-chip-edit="true"></md-chips>
+                                    <!--Chipsy end-->
+                                    <md-input-container class="md-block" flex-gt-sm>
+                                        <label>Liczba operatorow</label>
+                                        <input ng-model="badanie.liczbaOperatorow" type="number" min="1">
+                                    </md-input-container>
+                                    <md-input-container class="md-block" flex-gt-sm>
+                                        <label>Liczba cech</label>
+                                        <input ng-model="badanie.liczbaCech" type="number" min="1">
+                                    </md-input-container>
+                                    <md-input-container class="md-block" flex-gt-sm>
+                                        <label>Liczba produktow</label>
+                                        <input ng-model="badanie.liczbaProduktow" type="number" min="5">
+                                    </md-input-container>
+                                </div>
+                                <div layout-gt-sm="row">
+                                    <md-input-container class="md-block" flex-gt-sm>
+                                        <label>Liczba powtorzen</label>
+                                        <input ng-model="badanie.liczbaPowtorzen" type="number" min="1">
+                                    </md-input-container>
+                                    <md-input-container class="md-block" flex-gt-sm>
+                                        <label>Tytul</label>
+                                        <input ng-model="badanie.tytul" type="text">
+                                    </md-input-container>
+                                    <md-input-container class="md-block" flex-gt-sm>
+                                        <label>Nazwa firmy/wydzial</label>
+                                        <input id="nazwaFirmy" ng-model="badanie.nazwaFirmy" type="text">
+                                    </md-input-container>
+                                </div>
+                                <div layout-gt-sm="row">
+                                    <md-input-container class="md-block" flex-gt-sm>
+                                        <label>Odpowiedzialny</label>
+                                        <input ng-model="badanie.odpowiedzialny" type="text">
+                                    </md-input-container>
+                                    <md-input-container class="md-block" flex-gt-sm>
+                                        <label>Klient</label>
+                                        <input ng-model="baanie.klient" type="text">
+                                    </md-input-container>
+                                    <md-input-container class="md-block" flex-gt-sm>
+                                        <label>Proces</label>
+                                        <input ng-model="badanie.proces" type="text">
+                                    </md-input-container>
+                                    <md-datepicker ng-model="submissionDate" md-placeholder="Enter date">
+                                    </md-datepicker>
+                                </div>
+                                <div layout-gt-sm="row">
+                                    <md-input-container class="md-block" flex-gt-sm>
+                                        <label>Stanowisko</label>
+                                        <input ng-model="badanie.stanowisko" type="text">
+                                    </md-input-container>
+                                    <md-input-container class="md-block" flex-gt-sm>
+                                        <label>Nazwa czesci</label>
+                                        <input ng-model="badanie.nazwaCzesci" type="text">
+                                    </md-input-container>
+                                    <md-input-container class="md-block" flex-gt-sm>
+                                        <label>Nazwa elementu</label>
+                                        <input ng-model="badanie.nazwaElementu" type="text">
+                                    </md-input-container>
+                                </div>
+                            </form>
+                        </section>
+                    </div>
+                    <div>
+                        <section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
+                            <md-button ng-href="#traits" ng-cLick="zlecBadanie()" class="add-tab md-primary md-raised" type="submit">Dalej</md-button>
+                        </section>
+                    </div>
+                </md-content>
+            </div>
+        </md-content>
+    </div>
+
+
+    <!-- Angular Material Dependencies -->
 
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>
@@ -161,9 +160,9 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
 
     <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
-	<script src="scripts/material.js"></script>
-	<script src="https://cdn.gitcdn.xyz/cdn/angular/bower-material/v0.11.2/angular-material.js"></script>
-	<script src="JS.js"></script>
+    <script src="scripts/material.js"></script>
+    <script src="https://cdn.gitcdn.xyz/cdn/angular/bower-material/v0.11.2/angular-material.js"></script>
+    <script src="JS.js"></script>
 </body>
 
 </html>
